force-app/main/default/objects/PDE_c_Home__dlm/fields/ACD_valide_c__c.field-meta.xml
<CustomField>
    <fullName>ACD_valide_c__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ACD valide ?</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>ACD valide ?</labelOverride>
        <masterLabel>ACD valide ?</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Checkbox</type>
</CustomField>