force-app/main/default/objects/PDE_c_Home__dlm/fields/Adresse_de_consommation_c__c.field-meta.xml
<CustomField>
    <fullName>Adresse_de_consommation_c__c</fullName>
    <label>Adresse de consommation</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Adresse de consommation</labelOverride>
        <masterLabel>Adresse de consommation</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>