force-app/main/default/objects/PDE_c_Home__dlm/fields/Ancienne_date_echeance_c__c.field-meta.xml
<CustomField>
    <fullName>Ancienne_date_echeance_c__c</fullName>
    <label>Ancienne date d&apos;échéance</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Ancienne date d&apos;échéance</labelOverride>
        <masterLabel>Ancienne date d&apos;échéance</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Date</type>
</CustomField>