force-app/main/default/objects/PDE_c_Home__dlm/fields/AppelEnCours_c__c.field-meta.xml
<CustomField>
    <fullName>AppelEnCours_c__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Appel en cours ?</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Appel en cours ?</labelOverride>
        <masterLabel>Appel en cours ?</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Checkbox</type>
</CustomField>