force-app/main/default/objects/PDE_c_Home__dlm/fields/BudgetTotalOptimal_c__c.field-meta.xml
<CustomField>
    <fullName>BudgetTotalOptimal_c__c</fullName>
    <label>Budget Total Optimal (€HT/an)</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Budget Total Optimal (€HT/an)</labelOverride>
        <masterLabel>Budget Total Optimal (€HT/an)</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>6</scale>
    <type>Currency</type>
</CustomField>