force-app/main/default/objects/PDE_c_Home__dlm/fields/Calcul_PS_Max_OK_c__c.field-meta.xml
<CustomField>
    <fullName>Calcul_PS_Max_OK_c__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Calcul PS Max OK ?</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Calcul PS Max OK ?</labelOverride>
        <masterLabel>Calcul PS Max OK ?</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Checkbox</type>
</CustomField>