force-app/main/default/objects/PDE_c_Home__dlm/fields/Calendrier_fournisseur_c__c.field-meta.xml
<CustomField>
    <fullName>Calendrier_fournisseur_c__c</fullName>
    <label>Calendrier fournisseur</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Calendrier fournisseur</labelOverride>
        <masterLabel>Calendrier fournisseur</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>