force-app/main/default/objects/PDE_c_Home__dlm/fields/CARGaz_Future_c__c.field-meta.xml
<CustomField>
    <fullName>CARGaz_Future_c__c</fullName>
    <label>CAR Gaz Future</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>CAR Gaz Future</labelOverride>
        <masterLabel>CAR Gaz Future</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>