force-app/main/default/objects/PDE_c_Home__dlm/fields/CJA_Journaliere_c__c.field-meta.xml
<CustomField>
    <fullName>CJA_Journaliere_c__c</fullName>
    <label>CJA Journalière</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>CJA Journalière</labelOverride>
        <masterLabel>CJA Journalière</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>