force-app/main/default/objects/PDE_c_Home__dlm/fields/Code_Postal_c__c.field-meta.xml
<CustomField>
    <fullName>Code_Postal_c__c</fullName>
    <label>Code Postal</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Code Postal</labelOverride>
        <masterLabel>Code Postal</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>