force-app/main/default/objects/PDE_c_Home__dlm/fields/Commentaires_c__c.field-meta.xml
<CustomField>
    <fullName>Commentaires_c__c</fullName>
    <label>Commentaires</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Commentaires</labelOverride>
        <masterLabel>Commentaires</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>