force-app/main/default/objects/PDE_c_Home__dlm/fields/Conso_Pointe_c__c.field-meta.xml
<CustomField>
    <fullName>Conso_Pointe_c__c</fullName>
    <label>Conso Pointe</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Conso Pointe</labelOverride>
        <masterLabel>Conso Pointe</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>