force-app/main/default/objects/PDE_c_Home__dlm/fields/ConsoHC_c__c.field-meta.xml
<CustomField>
    <fullName>ConsoHC_c__c</fullName>
    <label>Conso HC</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Conso HC</labelOverride>
        <masterLabel>Conso HC</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>