force-app/main/default/objects/PDE_c_Home__dlm/fields/ConsoHP_c__c.field-meta.xml
<CustomField>
    <fullName>ConsoHP_c__c</fullName>
    <label>Conso HP</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Conso HP</labelOverride>
        <masterLabel>Conso HP</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>