force-app/main/default/objects/PDE_c_Home__dlm/fields/Consommation_Journaliere_Plafond_c__c.field-meta.xml
<CustomField>
    <fullName>Consommation_Journaliere_Plafond_c__c</fullName>
    <label>Consommation Journalière Plafond</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Consommation Journalière Plafond</labelOverride>
        <masterLabel>Consommation Journalière Plafond</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>