force-app/main/default/objects/PDE_c_Home__dlm/fields/Contrat_actif_c__c.field-meta.xml
<CustomField>
    <fullName>Contrat_actif_c__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Contrat actif</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Contrat actif</labelOverride>
        <masterLabel>Contrat actif</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Checkbox</type>
</CustomField>