force-app/main/default/objects/PDE_c_Home__dlm/fields/Date_debut_releve_c__c.field-meta.xml
<CustomField>
    <fullName>Date_debut_releve_c__c</fullName>
    <label>Date début relève</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Date début relève</labelOverride>
        <masterLabel>Date début relève</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Date</type>
</CustomField>