force-app/main/default/objects/PDE_c_Home__dlm/fields/Date_MAJ_Enedis_c__c.field-meta.xml
<CustomField>
    <fullName>Date_MAJ_Enedis_c__c</fullName>
    <label>Date maj conso Enedis</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Date maj conso Enedis</labelOverride>
        <masterLabel>Date maj conso Enedis</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Date</type>
</CustomField>