force-app/main/default/objects/PDE_c_Home__dlm/fields/Date_MES_c__c.field-meta.xml
<CustomField>
    <fullName>Date_MES_c__c</fullName>
    <label>Date MES</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Date MES</labelOverride>
        <masterLabel>Date MES</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Date</type>
</CustomField>