force-app/main/default/objects/PDE_c_Home__dlm/fields/Date_publication_tarif_c__c.field-meta.xml
<CustomField>
    <fullName>Date_publication_tarif_c__c</fullName>
    <label>Date de publication du tarif</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Date de publication du tarif</labelOverride>
        <masterLabel>Date de publication du tarif</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Date</type>
</CustomField>