force-app/main/default/objects/PDE_c_Home__dlm/fields/Date_signature_ACD_c__c.field-meta.xml
<CustomField>
    <fullName>Date_signature_ACD_c__c</fullName>
    <label>Date de signature de l&apos;ACD</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Date de signature de l&apos;ACD</labelOverride>
        <masterLabel>Date de signature de l&apos;ACD</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Date</type>
</CustomField>