force-app/main/default/objects/PDE_c_Home__dlm/fields/DateAnalyseFrom_c__c.field-meta.xml
<CustomField>
    <fullName>DateAnalyseFrom_c__c</fullName>
    <label>Début Date Analyse</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Début Date Analyse</labelOverride>
        <masterLabel>Début Date Analyse</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Date</type>
</CustomField>