force-app/main/default/objects/PDE_c_Home__dlm/fields/DateAnalyseTo_c__c.field-meta.xml
<CustomField>
    <fullName>DateAnalyseTo_c__c</fullName>
    <label>Fin Date Analyse</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Fin Date Analyse</labelOverride>
        <masterLabel>Fin Date Analyse</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Date</type>
</CustomField>