force-app/main/default/objects/PDE_c_Home__dlm/fields/DateAppel_c__c.field-meta.xml
<CustomField>
    <fullName>DateAppel_c__c</fullName>
    <label>Date de l&apos;Appel</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Date de l&apos;Appel</labelOverride>
        <masterLabel>Date de l&apos;Appel</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Date</type>
</CustomField>