force-app/main/default/objects/PDE_c_Home__dlm/fields/DateCalculPsMax_c__c.field-meta.xml
<CustomField>
    <fullName>DateCalculPsMax_c__c</fullName>
    <label>Date calcul des PS Max</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Date calcul des PS Max</labelOverride>
        <masterLabel>Date calcul des PS Max</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Date</type>
</CustomField>