force-app/main/default/objects/PDE_c_Home__dlm/fields/DateCalculPsMaxSansErreur_c__c.field-meta.xml
<CustomField>
    <fullName>DateCalculPsMaxSansErreur_c__c</fullName>
    <label>Date calcul des PS Max (Sans erreur)</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Date calcul des PS Max (Sans erreur)</labelOverride>
        <masterLabel>Date calcul des PS Max (Sans erreur)</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Date</type>
</CustomField>