force-app/main/default/objects/PDE_c_Home__dlm/fields/DateEcheance_c__c.field-meta.xml
<CustomField>
    <fullName>DateEcheance_c__c</fullName>
    <label>Date d&apos;échéance actuelle</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Date d&apos;échéance actuelle</labelOverride>
        <masterLabel>Date d&apos;échéance actuelle</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Date</type>
</CustomField>