force-app/main/default/objects/PDE_c_Home__dlm/fields/DateEcheanceContract_c__c.field-meta.xml
<CustomField>
    <fullName>DateEcheanceContract_c__c</fullName>
    <label>Date échéance contrat actuel</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Date échéance contrat actuel</labelOverride>
        <masterLabel>Date échéance contrat actuel</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Date</type>
</CustomField>