force-app/main/default/objects/PDE_c_Home__dlm/fields/DateFinCourbePsMax_c__c.field-meta.xml
<CustomField>
    <fullName>DateFinCourbePsMax_c__c</fullName>
    <label>Date de fin courbe des Ps Max</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Date de fin courbe des Ps Max</labelOverride>
        <masterLabel>Date de fin courbe des Ps Max</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Date</type>
</CustomField>