force-app/main/default/objects/PDE_c_Home__dlm/fields/DatePremierAppel_c__c.field-meta.xml
<CustomField>
    <fullName>DatePremierAppel_c__c</fullName>
    <label>Date du Premier Appel</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Date du Premier Appel</labelOverride>
        <masterLabel>Date du Premier Appel</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Date</type>
</CustomField>