force-app/main/default/objects/PDE_c_Home__dlm/fields/Demande_Cotation_c__c.field-meta.xml
<CustomField>
    <fullName>Demande_Cotation_c__c</fullName>
    <label>Demande de cotation</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Demande de cotation</labelOverride>
        <masterLabel>Demande de cotation</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>