force-app/main/default/objects/PDE_c_Home__dlm/fields/Email_c__c.field-meta.xml
<CustomField>
    <fullName>Email_c__c</fullName>
    <label>Email</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Email</labelOverride>
        <masterLabel>Email</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Email</type>
</CustomField>