force-app/main/default/objects/PDE_c_Home__dlm/fields/EnvelopeUUID_c__c.field-meta.xml
<CustomField>
    <fullName>EnvelopeUUID_c__c</fullName>
    <label>Envelope UUID</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Envelope UUID</labelOverride>
        <masterLabel>Envelope UUID</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>