force-app/main/default/objects/PDE_c_Home__dlm/fields/Fournisseur_c__c.field-meta.xml
<CustomField>
    <fullName>Fournisseur_c__c</fullName>
    <label>Fournisseur</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Fournisseur</labelOverride>
        <masterLabel>Fournisseur</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>