force-app/main/default/objects/PDE_c_Home__dlm/fields/Frequence_c__c.field-meta.xml
<CustomField>
    <fullName>Frequence_c__c</fullName>
    <label>Fréquence</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Fréquence</labelOverride>
        <masterLabel>Fréquence</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>