force-app/main/default/objects/PDE_c_Home__dlm/fields/FTA_c__c.field-meta.xml
<CustomField>
    <fullName>FTA_c__c</fullName>
    <label>FTA</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>FTA</labelOverride>
        <masterLabel>FTA</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>