force-app/main/default/objects/PDE_c_Home__dlm/fields/GRDF_Date_fin_droit_acces_c__c.field-meta.xml
<CustomField>
    <fullName>GRDF_Date_fin_droit_acces_c__c</fullName>
    <label>GRDF: Date fin droit d&apos;accès</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>GRDF: Date fin droit d&apos;accès</labelOverride>
        <masterLabel>GRDF: Date fin droit d&apos;accès</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Date</type>
</CustomField>