force-app/main/default/objects/PDE_c_Home__dlm/fields/GRDF_Droit_Acces_Expire_c__c.field-meta.xml
<CustomField>
    <fullName>GRDF_Droit_Acces_Expire_c__c</fullName>
    <defaultValue>false</defaultValue>
    <label>GRDF : Droit Accès Expiré</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>GRDF : Droit Accès Expiré</labelOverride>
        <masterLabel>GRDF : Droit Accès Expiré</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Checkbox</type>
</CustomField>