force-app/main/default/objects/PDE_c_Home__dlm/fields/GRDF_Id_Droit_Acces_c__c.field-meta.xml
<CustomField>
    <fullName>GRDF_Id_Droit_Acces_c__c</fullName>
    <label>GRDF: Id droit d&apos;accès</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>GRDF: Id droit d&apos;accès</labelOverride>
        <masterLabel>GRDF: Id droit d&apos;accès</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>