force-app/main/default/objects/PDE_c_Home__dlm/fields/GRDF_Statut_Donnees_Techniques_c__c.field-meta.xml
<CustomField>
    <fullName>GRDF_Statut_Donnees_Techniques_c__c</fullName>
    <label>GRDF: Statut données techniques</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>GRDF: Statut données techniques</labelOverride>
        <masterLabel>GRDF: Statut données techniques</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>